# neat-python

./: .coveragerc  .coveralls.yml  .gitignore  .gitmodules  .landscape.yml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  GPU_DESIGN_NOTES.md  LICENSE  MIGRATION.md  NEAT-PYTHON-LORENZ.md  Pipfile  README.md  REFACTORING_PLAN.md  WARP.md  main.py  progress-20260302.md  progress-20260314.md  progress-20260315.md  pyannotate.py  pyproject.toml  setup.py  type_info.json  upload.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
benchmarks/: gpu_benchmark.py
ctrnn-cpg/: config-ctrnn  config-test  derp  evolve_cpg.py  unit_tests.py  utils.py  winner-ctrnn
ctrnn_cpg/: __init__.py  config-ctrnn  config-test  evolve_cpg.py  unit_tests.py  visualize.py
docs/: Makefile  academic_research.rst  activation.rst  conf.py  config_essentials.rst  config_file.rst  cookbook.rst  ctrnn.rst  customization.rst  docutils.conf  faq.rst  genome-interface.rst  glossary.rst  index.rst  innovation_numbers.rst  installation.rst  make.bat  migration.rst  module_summaries.rst  neat_overview.rst  network-json-format.md  network_export.rst  plot_activations.py  quickstart.rst  reproducibility.rst  reproduction-interface.rst  requirements.txt  troubleshooting.rst  xor_example.rst
examples/: README.md  environment.yml  experiment_functions.py  experiment_template.py  game_visualizor.py  neat_experiment.py  requirements.txt  state_machine_experiment.py  visualize_example.py
examples/mnist/: config  (+2 more)
neat/: __init__.py  activations.py  aggregations.py  attributes.py  checkpoint.py  chromosome.py  config.py  distributed.py  diversity.py  genes.py  genome.py  graphs.py  indexer.py  innovation.py  math_util.py  parallel.py  population.py  random.py  reporting.py  reporting_additional.py  reproduction.py  reproduction_mutation_only.py  reproduction_state_machine.py  runtime_test.py  sequential_static.py  single_population.py  six_util.py  species.py  stagnation.py  state_machine_attributes.py  state_machine_full_genome.py  state_machine_genes.py  state_machine_genome.py  state_machine_genome_partially_fixed.py  state_machine_network.py  statistics.py  threaded.py  visualize.py  wandb.py
neat_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .gitignore  bad_configuration0  bad_configuration1  bad_configuration2  bad_configuration3  bad_configuration4  bad_configuration5  bad_configuration6  bad_configuration7  bad_configuration8  bad_configuration9  bad_configurationA  bad_configurationB  config_generation.py  ctrnn_config  recurrent_config  test_activation.py  test_aggregation.py  test_attributes.py  test_checkpoint.py  test_chromosome.py  test_config.py  test_config_save_restore.py  test_configuration  test_configuration2  test_configuration3  test_configuration4  test_configuration5  test_configuration_gpu_ctrnn  test_configuration_iznn  test_coverage_gaps.py  test_ctrnn.py  test_disable_rule.py  test_distance.py  test_distributed.py  test_export.py  test_extinction.py  test_feedforward.py  test_feedforward_network.py  test_fitness_evaluation.py  (+32 more)
(+392 files in other folders)
